fix(header): Make sign in link visible on mobile

--- a/style.css
+++ b/style.css
@@ -669,7 +669,7 @@ ul {
   text-decoration: underline;
 }
 
-.nav-wrapper a.login {
+.nav-wrapper a.sign-in {
   display: inline-block;
 }
 
