--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -59,7 +59,7 @@ $header-height: 71px;
       text-decoration: underline;
     }
 
-    &.login { display: inline-block; }
+    &.sign-in { display: inline-block; }
   }
 
   .menu-button {
